--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@cyiver.t Portfolio</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" tpye="text/css" href="css/h1.css">
 </head>
 <body>
     <h1 id="title">Hi, I'm Cy!</h1>
-    <script src="javascript/backgroundcolour.js"></script>
+    <script src="javascript/h1.js"></script>
 </body>
 </html>
