--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@cyiver.t Portfolio</title>
-    <link rel="stylesheet" tpye="text/css" href="css/h1.css">
+<!-- css/main/... Main Page -->
+    <link rel="stylesheet" tpye="text/css" href="css/main/h1.css">
+    <link rel="stylesheet" href="css/main/myimage.css">
+    <link rel="stylesheet" href="css/main/container.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <h1 id="title">Hi, I'm Cy!</h1>
-    <script src="javascript/h1.js"></script>
+    <div id="container">
+        <h1 id="title">Hi, I'm Cy!</h1>
+        <script src="javascript/h1.js"></script>
+        <img id="myImage" src="images/myimage.jpg" alt="Cy Iver Torrefranca">
+    </div>
+
+    <div id="spacer"></div>
+    <script src="javascript/infinitescroll"></script>
 </body>
 </html>
