--- a/index.html
+++ b/index.html
@@ -9,15 +9,27 @@
     <link rel="stylesheet" href="css/main/myimage.css">
     <link rel="stylesheet" href="css/main/container.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main/minilogos.css">
+
 </head>
 <body>
     <div id="container">
-        <h1 id="title">Hi, I'm Cy!</h1>
+        <div id="header">
+            <h1 id="title">Hi, I'm Cy!</h1>
+            <img id="myImage" src="images/myimage.jpg" alt="Cy Iver Torrefranca">
+        </div>
         <script src="javascript/h1.js"></script>
-        <img id="myImage" src="images/myimage.jpg" alt="Cy Iver Torrefranca">
+        <script src ="javascript/myimage.js"></script>
     </div>
-
-    <div id="spacer"></div>
-    <script src="javascript/infinitescroll"></script>
+    <div id="mini_logos">
+        <a href="https://github.com/cyivert" target="_blank">
+            <img src="images/mini logo/github_black_logo.png" alt="GitHub">
+        </a>
+        <a href="https://www.linkedin.com/in/cy-iver-torrefranca/" target="_blank">
+            <img src="images/mini logo/linkedin_black_logo.png" alt="LinkedIn">
+        </a>
+        <a href="" target="_blank">
+            <img src="images/mini logo/cv_black.png" alt="Instagram">
+    </div>
 </body>
 </html>
