--- a/index.html
+++ b/index.html
@@ -29,7 +29,17 @@
             <img src="images/mini logo/linkedin_black_logo.png" alt="LinkedIn">
         </a>
         <a href="" target="_blank">
-            <img src="images/mini logo/cv_black.png" alt="Instagram">
+            <img src="images/mini logo/cv_black.png" alt="Curriculum Vitae">
+        </a>
     </div>
+    <div class="content-container"> <!-- can be found at -->
+        <div>
+            <h2 id="about">About Me</h2>
+            <p id="about_me">
+                My name is Cy Iver Torrefranca, though most people call me Cy. I am currently pursuing a Software Engineering Advanced Diploma at Conestoga College. 
+            </p>
+        </div>
+    </div>
+    
 </body>
 </html>
