--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <a href="" target="_blank">
             <img src="images/mini logo/cv_black.png" alt="Curriculum Vitae">
         </a>
+        <script src="javascript/minilogos.js"></script>
     </div>
     <div class="content-container"> <!-- can be found at -->
         <div>
