Update container CSS and script file paths

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <h1 id="title">Hi, I'm Cy!</h1>
             <img id="myImage" src="images/myimage.jpg" alt="Cy Iver Torrefranca">
         </div>
-        <script src="javascript/h1.js"></script>
-        <script src ="javascript/myimage.js"></script>
+        <script src="javascript/main/h1.js"></script>
+        <script src ="javascript/main/myimage.js"></script>
     </div>
     <div id="mini_logos">
         <a href="https://github.com/cyivert" target="_blank">
@@ -31,16 +31,12 @@
         <a href="" target="_blank">
             <img src="images/mini logo/cv_black.png" alt="Curriculum Vitae">
         </a>
-        <script src="javascript/minilogos.js"></script>
+        <a href="about_me.html" target="_blank">
+            <img src="images/mini logo/about_me_black.png" alt="About Me">
+        </a>
+        <script src="javascript/main/minilogos.js"></script>
     </div>
-    <div class="content-container"> <!-- can be found at -->
-        <div>
-            <h2 id="about">About Me</h2>
-            <p id="about_me">
-                My name is Cy Iver Torrefranca, though most people call me Cy. I am currently pursuing a Software Engineering Advanced Diploma at Conestoga College. 
-            </p>
-        </div>
-    </div>
+
     
 </body>
 </html>
