--- a/about_me.html
+++ b/about_me.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
+    <link rel="stylesheet" href="css/about_me/about_me.css">
 </head>
 <body>
     <h1>About Me</h1>
-</body>
+
 </html>
+</body>
