--- a/about_me.html
+++ b/about_me.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="css/about_me/about_me.css">
 </head>
 <body>
-    <h1>About Me</h1>
+    <div id="about_me">
+        <h1>About Me</h1>
+    </div>
 
 </html>
 </body>
