Update about_me.html to wrap the heading in a div and improve styling

--- a/about_me.html
+++ b/about_me.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="css/about_me/about_me.css">
 </head>
 <body>
-    <div id="about_me">
-        <h1>About Me</h1>
+    <div id="about_me_header">
+        <h1 id="about_me_title">About Me</h1>
     </div>
+    <script src="javascript/about_me/about_me.js"></script>
 
 </html>
 </body>
