Update about_me.html to add "Under construction" message and engineer hehe

--- a/about_me.html
+++ b/about_me.html
@@ -11,6 +11,8 @@
         <h1 id="about_me_title">About Me</h1>
     </div>
     <script src="javascript/about_me/about_me.js"></script>
+    <h2>Under construction</h2>
+    <img src="images/enginir.png" alt="Engineer" id="engineer_image" style="width: 200px; height: 200px; border-radius: 50%;">
 
 </html>
 </body>
