Update about_me.html to add "Under construction" message and engineer image

--- a/about_me.html
+++ b/about_me.html
@@ -13,6 +13,7 @@
     <script src="javascript/about_me/about_me.js"></script>
     <h2>Under construction</h2>
     <img src="images/enginir.png" alt="Engineer" id="engineer_image" style="width: 200px; height: 200px; border-radius: 50%;">
+    <p>Hi, don't worry this will be finish soon. Thank you for navigating here!</p>
 
 </html>
 </body>
