--- a/about_me.html
+++ b/about_me.html
@@ -14,6 +14,7 @@
     <h2>Under construction</h2>
     <img src="images/enginir.png" alt="Engineer" id="engineer_image" style="width: 200px; height: 200px; border-radius: 50%;">
     <p>Hi, don't worry this will be finish soon. Thank you for navigating here!</p>
+    <p>Test</p>
 
 </html>
 </body>
