--- a/about_me.html
+++ b/about_me.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
     <link rel="stylesheet" href="css/about_me/about_me.css">
+    <link rel="stylesheet" href="css/about_me/nav_bar.css">
 </head>
 <body>
-    <div id="about_me_header">
-        <h1 id="about_me_title">About Me</h1>
-    </div>
-    <script src="javascript/about_me/about_me.js"></script>
-    <h2>Under construction</h2>
+    <nav id="navbar">
+        <h1 id="navbar_title">About Me ツ゚</h1>
+    </nav>
+
+    <h2>404: Under Construction</h2>
     <img src="images/enginir.png" alt="Engineer" id="engineer_image" style="width: 200px; height: 200px; border-radius: 50%;">
     <p>Hi, don't worry this will be finish soon. Thank you for navigating here!</p>
     <p>Test</p>
