style: Update about_me.html and minilogos.css for better responsiveness and visual appeal

--- a/about_me.html
+++ b/about_me.html
@@ -14,7 +14,7 @@
 
     <h2>404: Under Construction</h2>
     <img src="images/enginir.png" alt="Engineer" id="engineer_image" style="width: 200px; height: 200px; border-radius: 50%;">
-    <p>Hi, don't worry this will be finish soon. Thank you for navigating here!</p>
+    <p>I am working on it! :p</p>
 
 </html>
 </body>
