--- a/about_me.html
+++ b/about_me.html
@@ -6,6 +6,7 @@
     <title>About Me</title>
     <link rel="stylesheet" href="css/about_me/about_me.css">
     <link rel="stylesheet" href="css/about_me/nav_bar.css">
+    <link rel="stylesheet" href="css/about_me/column.css">
 </head>
 <body>
     <nav id="navbar">
@@ -15,6 +16,20 @@
     <h2>404: Under Construction</h2>
     <img src="images/enginir.png" alt="Engineer" id="engineer_image" style="width: 200px; height: 200px; border-radius: 50%;">
     <p>I am working on it! :p</p>
+
+    <div class="row1">
+        <div class="column">
+            <h2>My Skills</h2>
+            <li>Python</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+
+        </div>
+        <div class="column">
+            <h2>My Projects</h2>
+        </div>
+      </div>
 
 </html>
 </body>
