--- a/about_me.html
+++ b/about_me.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/about_me/about_me.css">
     <link rel="stylesheet" href="css/about_me/nav_bar.css">
     <link rel="stylesheet" href="css/about_me/column.css">
+    <link rel="stylesheet" href="css/about_me/about_me_logo.css">
 </head>
 <body>
     <nav id="navbar">
@@ -17,14 +18,15 @@
     <img src="images/enginir.png" alt="Engineer" id="engineer_image" style="width: 200px; height: 200px; border-radius: 50%;">
     <p>I am working on it! :p</p>
 
-    <div class="row1">
+    <div class="row">
         <div class="column">
             <h2>My Skills</h2>
-            <li>Python</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-
+            <div class="logos-container">
+                <img src="images/about_me_logos/python_logo.png" alt="Python" id="python_logo" class="about_me_logo">
+                <img src="images/about_me_logos/html_logo.png" alt="HTML" id="html_logo" class="about_me_logo">
+                <img src="images/about_me_logos/css_logo.png" alt="CSS" id="css_logo" class="about_me_logo">
+                <img src="images/about_me_logos/javascript_logo.png" alt="JavaScript" id="javascript_logo" class="about_me_logo">
+            </div>
         </div>
         <div class="column">
             <h2>My Projects</h2>
