--- a/about_me.html
+++ b/about_me.html
@@ -16,7 +16,7 @@
 
     <h2>404: Under Construction</h2>
     <img src="images/enginir.png" alt="Engineer" id="engineer_image" style="width: 200px; height: 200px; border-radius: 50%;">
-    <p>I am working on it! :p</p>
+    <p>Happy Canada Day!</p>
 
     <div class="row">
         <div class="column">
