style: Update about_me.html to include name heading

--- a/about_me.html
+++ b/about_me.html
@@ -18,6 +18,9 @@
     <img src="images/enginir.png" alt="Engineer" id="engineer_image" style="width: 200px; height: 200px; border-radius: 50%;">
     <p>Happy Canada Day!</p>
 
+    <h1>Hi, My Name is Cy Iver Torefranca</h1>
+
+
     <div class="row">
         <div class="column">
             <h2>My Skills</h2>
@@ -30,6 +33,7 @@
         </div>
         <div class="column">
             <h2>My Projects</h2>
+
         </div>
       </div>
 
