--- a/about_me.html
+++ b/about_me.html
@@ -20,7 +20,6 @@
 
     <h1>Hi, My Name is Cy Iver Torefranca</h1>
 
-
     <div class="row">
         <div class="column">
             <h2>My Skills</h2>
@@ -33,7 +32,8 @@
         </div>
         <div class="column">
             <h2>My Projects</h2>
-
+            <h3>Exercise Randomizer</h3>
+            <h3>File Organizer</h3>
         </div>
       </div>
 
