style: Update about_me.html to include detailed description in about_me_Description div

--- a/about_me.html
+++ b/about_me.html
@@ -14,13 +14,15 @@
         <h1 id="navbar_title">About Me ツ゚</h1>
     </nav>
 
-    <h2>404: Under Construction</h2>
-    <img src="images/enginir.png" alt="Engineer" id="engineer_image" style="width: 200px; height: 200px; border-radius: 50%;">
-    <p>Happy Canada Day!</p>
-
-    <h1>Hi, My Name is Cy Iver Torefranca</h1>
+    <h1>Scroll Down!</h1>
 
     <div class="row">
+        <div class="column">
+            <h2>About Me</h2>
+            <div id="about_me_Description">
+                <p>Hi! My name is Cy Iver Torrefranca, and I am a Software Engineering student at Conestoga College Waterloo Campus. I am passionate about taking initiative and developing applications. With the programming language Python, I have developed projects such as the File Organizer and an ongoing Exercise Randomizer (more explanation to come). This web portfolio is my first real hands-on project using HTML, CSS, and JavaScript, and I am excited to showcase my skills and projects here.</p>
+            </div>
+        </div>
         <div class="column">
             <h2>My Skills</h2>
             <div class="logos-container">
