style: Add animation and style to about_me.html

--- a/about_me.html
+++ b/about_me.html
@@ -15,6 +15,7 @@
     </nav>
 
     <h1>Scroll Down!</h1>
+    <p>i'll be adding animation and style soon.</p>
 
     <div class="row">
         <div class="column">
