style: Update about_me.html to include logos and descriptions for Python, HTML, CSS, and JavaScript

--- a/about_me.html
+++ b/about_me.html
@@ -28,9 +28,13 @@
             <h2>My Skills</h2>
             <div class="logos-container">
                 <img src="images/about_me_logos/python_logo.png" alt="Python" id="python_logo" class="about_me_logo">
+                <p>Python</p>
                 <img src="images/about_me_logos/html_logo.png" alt="HTML" id="html_logo" class="about_me_logo">
+                <p>HTML</p>
                 <img src="images/about_me_logos/css_logo.png" alt="CSS" id="css_logo" class="about_me_logo">
+                <p>CSS</p>
                 <img src="images/about_me_logos/javascript_logo.png" alt="JavaScript" id="javascript_logo" class="about_me_logo">
+                <p>JavaScript</p>
             </div>
         </div>
         <div class="column">
