style: Update about_me.html to arrange skills titles and logos, and add layout ideas for future animation

--- a/about_me.html
+++ b/about_me.html
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="column">
-            <h2>My Skills</h2>
+            <h2>My Skills</h2> <!-- Need arranging with titles and logos and build ideas for layouts for future animation -->
             <div class="logos-container">
                 <img src="images/about_me_logos/python_logo.png" alt="Python" id="python_logo" class="about_me_logo">
                 <p>Python</p>
@@ -37,6 +37,7 @@
                 <p>JavaScript</p>
             </div>
         </div>
+        
         <div class="column">
             <h2>My Projects</h2>
             <h3>Exercise Randomizer</h3>
