style: Update about_me.html to include navbar title and add animation and style

--- a/about_me.html
+++ b/about_me.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="css/about_me/nav_bar.css">
     <link rel="stylesheet" href="css/about_me/column.css">
     <link rel="stylesheet" href="css/about_me/about_me_logo.css">
+    <link rel="stylesheet" href="css/about_me/navbar_title.css">
 </head>
 <body>
     <nav id="navbar">
         <h1 id="navbar_title">About Me ツ゚</h1>
+        <script src="javascript/about_me/navbar.js"></script>
     </nav>
 
     <h1>Scroll Down!</h1>
@@ -40,8 +42,7 @@
         
         <div class="column">
             <h2>My Projects</h2>
-            <h3>Exercise Randomizer</h3>
-            <h3>File Organizer</h3>
+
         </div>
       </div>
 
