style: Update about_me.html to include dark theme toggle functionality and navbar title animation

--- a/about_me.html
+++ b/about_me.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <title>About Me ツ゚</title>
     <link rel="stylesheet" href="css/about_me/about_me.css">
     <link rel="stylesheet" href="css/about_me/nav_bar.css">
     <link rel="stylesheet" href="css/about_me/column.css">
