style: Update about_me.html to adjust positioning of mini logos, add margin to images, and include dark theme toggle functionality and navbar title animation

--- a/about_me.html
+++ b/about_me.html
@@ -24,25 +24,39 @@
         <div class="column">
             <h2>About Me</h2>
             <div id="about_me_Description">
-                <p>Hi! My name is Cy Iver Torrefranca, and I am a Software Engineering student at Conestoga College Waterloo Campus. I am passionate about taking initiative and developing applications. With the programming language Python, I have developed projects such as the File Organizer and an ongoing Exercise Randomizer (more explanation to come). This web portfolio is my first real hands-on project using HTML, CSS, and JavaScript, and I am excited to showcase my skills and projects here.</p>
+                <p>Hi! My name is Cy Iver Torrefranca, and I am a Software Engineering student at Conestoga College Waterloo Campus. I am passionate about taking initiative and developing applications. With the programming language Python, I have developed projects such as a File Organizer and an ongoing Exercise Randomizer (more explanation to come). This web portfolio is my first real hands-on project using HTML, CSS, and JavaScript, and I am excited to showcase my skills and projects here.</p>
             </div>
+        </div>
+
+        <div class="column">
+            <h2>Projects</h2>
         </div>
         <div class="column">
             <h2>My Skills</h2> <!-- Need arranging with titles and logos and build ideas for layouts for future animation -->
             <div class="logos-container">
+                <h3 class="column-title">Programming Languages</h3>
                 <img src="images/about_me_logos/python_logo.png" alt="Python" id="python_logo" class="about_me_logo">
                 <p>Python</p>
+                <!-- Frontend-->
+                <h3 class="column-title">Frontend</h3>
                 <img src="images/about_me_logos/html_logo.png" alt="HTML" id="html_logo" class="about_me_logo">
-                <p>HTML</p>
+                <p>HTML 5</p>
                 <img src="images/about_me_logos/css_logo.png" alt="CSS" id="css_logo" class="about_me_logo">
-                <p>CSS</p>
+                <p>CSS 3</p>
                 <img src="images/about_me_logos/javascript_logo.png" alt="JavaScript" id="javascript_logo" class="about_me_logo">
                 <p>JavaScript</p>
+                <!-- DevOps -->
+                <h3 class="column-title">DevOps</h3>
+                <img src="images/about_me_logos/git_logo.png" alt="Git" id="git_logo" class="about_me_logo">
+                <p>Git</p>
+                <img src="images/about_me_logos/github_logo.png" alt="GitHub" id="github_logo" class="about_me_logo">
+                <p>GitHub</p>
+
             </div>
         </div>
         
         <div class="column">
-            <h2>My Projects</h2>
+            <h2>More Info...</h2>
 
         </div>
       </div>
