--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@cyiver.t Portfolio</title>
 <!-- css/main/... Main Page -->
-    <link rel="stylesheet" tpye="text/css" href="css/main/h1.css">
+    <link rel="stylesheet" type="text/css" href="css/main/h1.css">
     <link rel="stylesheet" href="css/main/myimage.css">
     <link rel="stylesheet" href="css/main/container.css">
     <link rel="stylesheet" href="css/main.css">
