fix: Resolve bug causing misalignment of header in Edge browser

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="css/main/minilogos.css">
 
 </head>
-<body>
+<body> <!--bug: Edge browser still starts with dark mode background?! im confuse...-->
     <div id="container">
-        <div id="header">
+        <div id="header"> <!-- bug: Edge browser shifts myImage and title to the left-->
             <h1 id="title">Hi, I'm Cy!</h1>
             <img id="myImage" src="images/myimage.jpg" alt="Cy Iver Torrefranca">
         </div>
