style: Adjust mini logo positioning and spacing in minilogos.css

--- a/index.html
+++ b/index.html
@@ -22,18 +22,29 @@
         <script src ="javascript/main/myimage.js"></script>
     </div>
     <div id="mini_logos">
-        <a href="https://github.com/cyivert" target="_blank">
+        <div class="logo-container">
+            <a href="https://github.com/cyivert" target="_blank">
             <img src="images/mini logo/github_black_logo.png" alt="GitHub">
         </a>
-        <a href="https://www.linkedin.com/in/cy-iver-torrefranca/" target="_blank">
+        </div>
+
+        <div class="logo-container">
+            <a href="https://www.linkedin.com/in/cy-iver-torrefranca/" target="_blank">
             <img src="images/mini logo/linkedin_black_logo.png" alt="LinkedIn">
         </a>
-        <a href="" target="_blank">
+        </div>
+        
+        <div class="logo-container">
+            <a href="" target="_blank">
             <img src="images/mini logo/cv_black.png" alt="Curriculum Vitae">
         </a>
-        <a href="about_me.html" target="_blank">
+        </div>
+
+        <div class="logo-container">
+            <a href="about_me.html" target="_blank">
             <img src="images/mini logo/about_me_black.png" alt="About Me">
         </a>
+        <dive class="logo-container">
         <script src="javascript/main/minilogos.js"></script>
     </div>
 
