--- a/about_me.html
+++ b/about_me.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me ツ゚</title>
+    <!-- icon -->
+    <link rel="icon" href="location..." type="image/png">
     <!-- css/about_me/...-->
     <link rel="stylesheet" href="css/about_me/about_me.css">
     <link rel="stylesheet" href="css/about_me/nav_bar.css">
