--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@cyiver.t Portfolio</title>
+<!-- icon -->
+    <link rel="icon" href="location..." type="image/png">
 <!-- css/main/... Main Page -->
     <link rel="stylesheet" type="text/css" href="css/main/h1.css">
     <link rel="stylesheet" href="css/main/myimage.css">
