--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/main/h1.css">
     <link rel="stylesheet" href="css/main/myimage.css">
     <link rel="stylesheet" href="css/main/container.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main/main.css">
     <link rel="stylesheet" href="css/main/minilogos.css">
 
 </head>
