style: Add 404 message to about_me.html

--- a/about_me.html
+++ b/about_me.html
@@ -21,6 +21,7 @@
 
     <h1>Scroll Down!</h1>
     <p>i'll be adding animation and style soon.</p>
+    <p>404: Underdevelopment.</p>
 
     <div class="row">
         <div class="column">
