style: Update title icon in about_me.html and index.html

--- a/about_me.html
+++ b/about_me.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me ツ゚</title>
-    <!-- icon -->
+    <!-- title icon -->
     <link rel="icon" href="location..." type="image/png">
     <!-- css/about_me/...-->
     <link rel="stylesheet" href="css/about_me/about_me.css">
@@ -19,7 +19,7 @@
         <script src="javascript/about_me/navbar.js"></script>
     </nav>
 
-    <h1>Scroll Down!</h1>
+    <h1>Scroll Down!</h1>Hey I am planning toadd a scrolling animation transition everytime I scroll on about_me.html
     <p>i'll be adding animation and style soon.</p>
 
     <div class="row">
