--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@cyiver.t Portfolio</title>
-<!-- icon -->
+<!-- title icon -->
     <link rel="icon" href="location..." type="image/png">
 <!-- css/main/... Main Page -->
     <link rel="stylesheet" type="text/css" href="css/main/h1.css">
