--- a/about_me.html
+++ b/about_me.html
@@ -19,7 +19,7 @@
         <script src="javascript/about_me/navbar.js"></script>
     </nav>
 
-    <h1>Scroll Down!</h1>Hey I am planning toadd a scrolling animation transition everytime I scroll on about_me.html
+    <h1>Scroll Down!</h1>
     <p>i'll be adding animation and style soon.</p>
 
     <div class="row">
