style: Update about_me.html to improve readability and fix typos

--- a/about_me.html
+++ b/about_me.html
@@ -26,7 +26,12 @@
         <div class="column">
             <h2>About Me</h2>
             <div id="about_me_Description">
-                <p>Hi! My name is Cy Iver Torrefranca, and I am currently studying SET (Software Engineering Technology) at Conestoga College Waterloo Campus. I am passionate about taking initiative and developing applications. With the programming language Python, I have developed projects such as a File Organizer and an ongoing Exercise Randomizer (more explanation to come). This web portfolio is my first real hands-on project using HTML, CSS, and JavaScript, and I am excited to showcase my skills and projects here.</p>
+                <p>
+                    Hi! My name is Cy Iver Torrefranca, and I am currently studying SET (Software Engineering Technology) at Conestoga College Waterloo Campus. 
+                    I am passionate about taking initiative and developing applications. With the programming language Python, I have developed projects such as 
+                    a File Organizer and an ongoing Exercise Randomizer (more explanation to come). This web portfolio is my first real hands-on project using 
+                    HTML, CSS, and JavaScript, and I am excited to showcase my skills and projects here.
+                </p>
             </div>
         </div>
 
